Bug 115296 - FILEOPEN: Paragraph borders are non-continuous on paragraphs with paragraph spacing
Summary: FILEOPEN: Paragraph borders are non-continuous on paragraphs with paragraph s...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:6.2.0 target:6.1.4
Keywords: bibisected, bisected, regression
: 115491 119025 119338 121157 (view as bug list)
Depends on:
Blocks: Regressions-borderline Paragraph-Borders
  Show dependency treegraph
 
Reported: 2018-01-29 12:18 UTC by Xisco Faulí
Modified: 2018-11-04 13:27 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.1 (116.80 KB, image/png)
2018-01-29 12:18 UTC, Xisco Faulí
Details
sample 2 (25.00 KB, application/msword)
2018-01-29 12:19 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-01-29 12:18:29 UTC
Created attachment 139429 [details]
comparison MSO 2010 and LibreOffice 6.1

Steps to reproduce:
1. Open attachment 54027 [details] from bug 43429

Observed behaviour: Left and right borders have empty gaps. See attached image

Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: 75802ae40ae67737ae9e4f1a38434e0587affff6
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2018-01-29 12:19:08 UTC
Created attachment 139430 [details]
sample 2

another file affected
Comment 2 Xisco Faulí 2018-01-29 12:20:25 UTC
Regression introduced by:

author	Armin Le Grand <Armin.Le.Grand@cib.de>	2017-12-01 16:08:10 +0100
committer	Armin Le Grand <Armin.Le.Grand@cib.de>	2017-12-07 16:03:53 +0100
commit 1d86f43a10f097aa4925bd48870477001098f5ff (patch)
tree 9a77dc6a9d3c4563f5154dfa7cf96823d45fad74
parent f894af6d67510ade1447197833a36151bd778214 (diff)
SwFrameBorder: Replaced BorderGeometry creation partially

Bisected with: bibisect-linux64-6.1

Adding Cc: to Armin Le Grand
Comment 3 raal 2018-03-12 12:39:09 UTC
*** Bug 115491 has been marked as a duplicate of this bug. ***
Comment 4 Xisco Faulí 2018-08-02 10:14:27 UTC
*** Bug 119025 has been marked as a duplicate of this bug. ***
Comment 5 Regina Henschel 2018-08-18 17:24:01 UTC
From the attached image I guess, that it is not about frame borders but about paragraph borders.
Comment 6 Xisco Faulí 2018-08-20 16:06:54 UTC
*** Bug 119338 has been marked as a duplicate of this bug. ***
Comment 7 Armin Le Grand (collabora) 2018-10-27 13:28:14 UTC
May have to do with SwLineRects. Happens when adding ParagraphSpacings (Above/Below) combined with Border style for paragraph.
MST metioned that there was code that connected/prolonged that lines when this was active, corresponding to the newxt/prev para having the same BorderStyle.
Comment 8 Armin Le Grand (collabora) 2018-10-27 16:22:50 UTC
Got a LO-5-4-7-2, a version where that line prolongation takes place already and a new paragraph does not start a new BorderFrame. Will need to debug that one to see what happened there to do that. Maybe that was just lost with BorderLine refactorings...
Comment 9 Armin Le Grand (collabora) 2018-10-27 21:35:15 UTC
Okay, reason found, debugged master and LO-5-4 in paralell and checked. Found that I killed that when changing SwFrame::PaintSwFrameShadowAndBorder to primitive usage (bigger restucture). Could re-add with not too much hassle.
Fix on gerrit (see https://gerrit.libreoffice.org/#/c/62451/). Will check when in, but should be fixed with that.
Comment 10 Commit Notification 2018-10-28 07:36:57 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e89e8941e114d4d1adf76df995a3f1a8d1bff4b1

tdf#115296 extend vertical FrameBorders for joined Frames

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Armin Le Grand (collabora) 2018-10-28 11:31:32 UTC
Fix in master, shbe fine
Comment 12 Commit Notification 2018-10-29 10:03:04 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

https://git.libreoffice.org/core/+/ea7d9105456537d2e0a6b7dcf051fee1fa259954%5E%21

tdf#115296 extend vertical FrameBorders for joined Frames

It will be available in 6.1.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Xisco Faulí 2018-10-29 18:01:52 UTC
Verified in

Version: 6.2.0.0.alpha1+
Build ID: 19a0698079fbba36646a2d06eaec3a7fde60b2f5
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

@Armin Le Grand, Thanks for the quick fix!
Comment 14 Dieter 2018-11-04 13:27:08 UTC
*** Bug 121157 has been marked as a duplicate of this bug. ***