tdf#115296 extend vertical FrameBorders for joined Frames

This feature was lost on my changes for FrameBorder primitive
creation. It was calculated/applied formally in
lcl_PaintLeftRightLine

Change-Id: Ie44619a4c4e44ff4584533685cb21882c323742e
Reviewed-on: https://gerrit.libreoffice.org/62451
Tested-by: Jenkins
Reviewed-by: Armin Le Grand <Armin.Le.Grand@cib.de>